--- a/EZBuy/src/app/shared/dialogs/sucess/sucess.component.html
+++ b/EZBuy/src/app/shared/dialogs/sucess/sucess.component.html
@@ -4,5 +4,5 @@
 
 </div>
 <div mat-dialog-actions class='flex'>
-  <button mat-button [mat-dialog-close]="true" >Close</button>
+  <button mat-button (click)='close()'>Close</button>
 </div>
