--- a/EZBuy/src/app/componets/product/product.component.html
+++ b/EZBuy/src/app/componets/product/product.component.html
@@ -24,37 +24,12 @@
     <div class="contents">
       <table>
         <tr>
-          <th>Width</th>
-          <th>Height</th>
+          <th>Description</th>
         </tr>
         <tr>
-          <td>3000mm</td>
-          <td>4000mm</td>
+          <td>{{product.description}}</td>
         </tr>
-        <tr>
-          <th>Something</th>
-          <th>Something</th>
-        </tr>
-        <tr>
-          <td>200mm</td>
-          <td>200mm</td>
-        </tr>
-        <tr>
-          <th>Something</th>
-          <th>Something</th>
-        </tr>
-        <tr>
-          <td>200mm</td>
-          <td>200mm</td>
-        </tr>
-        <tr>
-          <th>Something</th>
-          <th>Something</th>
-        </tr>
-        <tr>
-          <td>200mm</td>
-          <td>200mm</td>
-        </tr>
+
       </table>
     </div>
   </div>
