--- a/EZBuy/src/app/componets/product/product.component.html
+++ b/EZBuy/src/app/componets/product/product.component.html
@@ -5,7 +5,7 @@
       <div class="left">
         <div class="details">
           <h1>{{product.name}}</h1>
-          <p>${{product.price}}</p>
+          <p class='currencyColor'>${{product.price}}</p>
         </div>
         <div class="buy" (click)='buyButtonClick()'><i class="material-icons">add_shopping_cart</i></div>
       </div>
