--- a/EZBuy/src/app/pages/products/products.component.scss
+++ b/EZBuy/src/app/pages/products/products.component.scss
@@ -11,21 +11,31 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-top:20px;
+
 }
+
 
 .container>.item {
   flex: 1 1 1 1 1;
 }
+.row{
+  margin-top: 30px;
+}
 
-
+.center{
+  display:flex;
+  justify-content:center
+}
 input {
   font-size: 16px;
   outline: none;
   padding: 80px;
   display: inline-block;
-  width: 26%;
+  width: 42%;
   border-radius: 8px;
-  padding: 16px 70px 8px 38px;
+  padding: 12px 16px 12px 16px;
+  margin-right:10px;
   position: relative;
   background: white;
   border: 1px solid #ddd;
