--- a/EZBuy/src/app/pages/checkout/checkout.component.html
+++ b/EZBuy/src/app/pages/checkout/checkout.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class='credit-info'>
+      <div class='credit-info' [ngClass]='totalPrice === 0 ? "disable" : ""'>
         <div class='credit-info-content'>
           <table class='half-input-table'>
             <tr>
@@ -55,18 +55,18 @@
             </tr>
           </table>
           <img src='https://cdn.pixabay.com/photo/2015/05/26/09/37/paypal-784404_960_720.png' height='80'
-            class='credit-card-image' id='credit-card-image' *ngIf='select == paymentMethodEnum.Paypal || !hide' />
+            class='credit-card-image' id='credit-card-image' *ngIf='select === "Paypal" || !paypalToggle' />
 
-          <div *ngIf='select == paymentMethodEnum.Stripe'>
-            <h1 class='stripeTitle'>Stripe</h1>
+          <div *ngIf='select === "Stripe"'>
+            <h1 class=' stripeTitle'>Stripe</h1>
           </div>
 
 
-          <button class='pay-btn' (click)='pay(totalPrice)' *ngIf='select == paymentMethodEnum.Stripe'
+          <button class='pay-btn' (click)='payWithStripe(totalPrice)' *ngIf='select === "Stripe"'
             [disabled]='totalPrice === 0'>Pay
             With Stripe</button>
           <div>
-            <div #paypal class='paypalDiv' [ngClass]='hide ? "hide" : ""'></div>
+            <div #paypal class='paypalDiv' [ngClass]='select === "Stripe" ? "hide" : ""'></div>
           </div>
 
 
