--- a/EZBuy/src/app/pages/checkout/checkout.component.scss
+++ b/EZBuy/src/app/pages/checkout/checkout.component.scss
@@ -175,6 +175,9 @@ ul li:hover {
  .hide{
    display:none;
  }
+ .disable{
+  pointer-events: none;
+ }
 .dense {
   line-height: 1.2em;
   font-size: 16px;
