minor bug fix with credit card paypal click

--- a/EZBuy/src/app/pages/checkout/checkout.component.scss
+++ b/EZBuy/src/app/pages/checkout/checkout.component.scss
@@ -224,6 +224,7 @@ ul li:hover {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   position: relative;
+  overflow:scroll;
 }
 
 .dropdown-btn {
