replaced overflow with overflow-y since we only need to scroll vertically and not horiziontally

--- a/EZBuy/src/app/pages/checkout/checkout.component.scss
+++ b/EZBuy/src/app/pages/checkout/checkout.component.scss
@@ -224,7 +224,7 @@ ul li:hover {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   position: relative;
-  overflow:scroll;
+  overflow-y: scroll;
 }
 
 .dropdown-btn {
